// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document progress dot component renders correctly with defaults 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#aaaaaa"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5  light gray"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    />
  </div>
</div>
`;

exports[`document progress dot component renders correctly with done = false, text = 'null' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#aaaaaa"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5  light gray"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    />
  </div>
</div>
`;

exports[`document progress dot component renders correctly with done = false, text = 'some text' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#aaaaaa"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5  light gray"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    >
      some text
    </div>
  </div>
</div>
`;

exports[`document progress dot component renders correctly with done = true, text = 'null' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#9dd887"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f058",
          "M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z",
        ],
        "iconName": "check-circle",
        "prefix": "fas",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    />
    <div>
      10/1/1904
    </div>
  </div>
</div>
`;

exports[`document progress dot component renders correctly with done = true, text = 'some text' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#9dd887"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f058",
          "M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z",
        ],
        "iconName": "check-circle",
        "prefix": "fas",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    >
      some text
    </div>
    <div>
      10/1/1904
    </div>
  </div>
</div>
`;

exports[`document progress dot component renders correctly with started = false, text = 'null' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#aaaaaa"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5  light gray"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    />
  </div>
</div>
`;

exports[`document progress dot component renders correctly with started = false, text = 'some text' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#aaaaaa"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5  light gray"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    >
      some text
    </div>
  </div>
</div>
`;

exports[`document progress dot component renders correctly with started = true, text = 'null' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#124f81"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    />
  </div>
</div>
`;

exports[`document progress dot component renders correctly with started = true, text = 'some text' 1`] = `
<div
  className="center"
>
  <FontAwesomeIcon
    border={false}
    className=""
    color="#124f81"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f111",
          "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z",
        ],
        "iconName": "circle",
        "prefix": "far",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <div
    className="absolute left-align h5"
    style={
      Object {
        "maxWidth": "7rem",
      }
    }
  >
    <div
      className="bold"
    >
      some text
    </div>
  </div>
</div>
`;

exports[`document progress line component renders correctly when done = false 1`] = `
<div
  className="flex-auto bg-gray"
  style={
    Object {
      "height": "3px",
    }
  }
/>
`;

exports[`document progress line component renders correctly when done = true 1`] = `
<div
  className="flex-auto bg-blue"
  style={
    Object {
      "height": "3px",
    }
  }
/>
`;

exports[`document progress line component renders correctly with defaults 1`] = `
<div
  className="flex-auto bg-gray"
  style={
    Object {
      "height": "3px",
    }
  }
/>
`;

exports[`state dashboard current document item component renders correctly 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={false}
        started={true}
        text="Draft"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Review"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Decision"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        Open
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                576,
                512,
                Array [],
                "f044",
                "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
              ],
              "iconName": "edit",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'approved' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={true}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Review"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Approved"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        Approval Letter
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'disapproved' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={true}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Review"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Disapproved"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        Disapproval Letter
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'draft' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={false}
        started={true}
        text="Draft"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Review"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Decision"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        Open
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                576,
                512,
                Array [],
                "f044",
                "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
              ],
              "iconName": "edit",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'in clearance' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={true}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Review"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={false}
        started={true}
        text="Clearance"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Decision"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        View
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'in review' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={true}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={false}
        started={true}
        text="Review"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Decision"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        View
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'state response' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={true}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={false}
        started={true}
        text="Pending Comments"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Decision"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        View
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'submitted' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={false}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Received"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Review"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Clearance"
      />
      <ProgressLine
        done={false}
      />
      <ProgressDot
        done={false}
        started={false}
        text="Decision"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        View
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current document item component renders for status 'withdrawn' 1`] = `
<Fragment>
  <div
    className="sm-flex items-center justify-between mb4 pb4"
  >
    <div
      className="bold sm-col-2"
    >
      document name
    </div>
    <div
      className="sm-col-7 flex items-center"
    >
      <ProgressDot
        done={false}
        started={true}
        text="Submitted"
      />
      <ProgressLine
        done={true}
      />
      <ProgressDot
        done={true}
        started={false}
        text="Withdrawn"
      />
    </div>
    <div
      className="sm-col-2 sm-right-align"
    >
      <Btn
        extraCss="col-8 p1 bg-blue white"
        kind="primary"
        onClick={[Function]}
        size="small"
      >
        View
         
        <FontAwesomeIcon
          border={false}
          className="ml1"
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f061",
                "M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z",
              ],
              "iconName": "arrow-right",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Btn>
    </div>
  </div>
</Fragment>
`;

exports[`state dashboard current documents component renders correctly for apd 1`] = `
<div>
  <DocumentItem
    buttonClick={[Function]}
    key="apd id"
    name="APD for 1, 2, 3"
    status={Symbol(draft)}
  />
</div>
`;

exports[`state dashboard current documents component renders correctly if fetching 1`] = `
<div
  className="h2 center"
>
  <FontAwesomeIcon
    border={false}
    className="mr1"
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f110",
          "M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z",
        ],
        "iconName": "spinner",
        "prefix": "fas",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="sm"
    spin={true}
    symbol={false}
    title=""
    transform={null}
  />
   Loading APDs
</div>
`;
